Do not hide virtual keyboard if the focused node is editable

Fixes: QTBUG-91257
Change-Id: Ic303278e2b8871e6bcb3f4f5c5810c8f43371bb8
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>